# scadium

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .prettierignore  ANALYSIS.md  Anchor.toml  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  run-api.sh  skills-lock.json  tsconfig.anchor.json  tsconfig.base.json  turbo.json  vercel.json
.claude/: README.md
.claude/agents/: perf-auditor.md  r3f-scene-builder.md  scadium-developer.md  scadium-planner.md  scadium-reviewer.md  scadium-tester.md  visual-qa.md
.claude/commands/: dev-task.md  plan.md  scadium-next.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-devnet.yml
apps/api/: Dockerfile  docker-entrypoint.sh  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
apps/api/prisma/: schema.prisma  seed.mjs
apps/api/src/: app.module.ts  index.ts  main.ts
apps/api/test/: README.md  _ci-smoke.e2e-spec.ts  accept-legal.e2e-spec.ts  affiliate-settle.e2e-spec.ts  age-ack.e2e-spec.ts  age-gate-enforcement.e2e-spec.ts  airdrop-distribute.e2e-spec.ts  airdrop-idempotency.e2e-spec.ts  airdrop-sybil.e2e-spec.ts  audit-log.e2e-spec.ts  auth-banned.e2e-spec.ts  auth-jwt.e2e-spec.ts  auth-refresh.e2e-spec.ts  balance-ledger.e2e-spec.ts  balance-race.e2e-spec.ts  bankroll-drain.e2e-spec.ts  blackjack-busy-round.ts  blackjack-settlement.e2e-spec.ts  blackjack-verifiability.e2e-spec.ts  blackjack-verifier-flow.e2e-spec.ts  blackjack-winning-reconcile.e2e-spec.ts  coinflip-biggestwin.e2e-spec.ts  engine-harness.ts  (+64 more)
apps/web/: .eslintrc.json  Dockerfile  eslint.config.mjs  middleware.ts  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/worker/: Dockerfile  eslint.config.mjs  package.json  tsconfig.json
audits/: README.md  scope.md  threat-model.md
docs/: bankroll-model.md
docs/adr/: 0001-provably-fair-shared-rounds.md  0002-onchain-entropy.md  0003-offchain-first-hybrid-scad-engine.md
docs/compliance/: licensing.md
docs/runbooks/: cosigner-key.md  demo-deployment.md  disaster-recovery.md  incident-response.md  key-management.md  load-chaos.md  staged-rollout.md  trusted-proxy.md  vault-faz3-defi-design.md  vault-onchain.md
infra/: .env.prod.example  Caddyfile  docker-compose.prod.yml  docker-compose.yml
load/: crash-mixed.js  package.json
programs/scadium_lottery/: Cargo.toml
programs/scadium_lottery/src/: lib.rs
programs/scadium_rng/: Cargo.toml
programs/scadium_rng/src/: lib.rs
programs/scadium_swap/: Cargo.toml
programs/scadium_swap/src/: lib.rs
programs/scadium_vault/: Cargo.toml
programs/scadium_vault/src/: lib.rs
scripts/: audit-status-gate.sh  check-bootstrap.sh  deploy.sh  devnet-bringup.sh  init-house.ts  setup-lottery.ts  setup-pool.ts  setup-rng.ts  setup-scad.ts
tests/: scadium_lottery.ts  scadium_swap.ts  scadium_vault.ts
(+568 files in other folders)
