[package]
name = "scadium-lottery"
version = "0.1.0"
description = "Scadium on-chain PancakeSwap-style 6-digit $SCAD lottery"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "scadium_lottery"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0", features = ["init-if-needed"] }
anchor-spl = "1.0"
solana-sha256-hasher = "3.1"

[dev-dependencies]
# Test-only: parse the shared cross-impl golden-vector fixture
# (packages/fair/src/__fixtures__/golden.json). Not linked into the on-chain
# program — dev-dependencies compile only for `cargo test`.
serde_json = "1.0"
