[package]
name = "scadium-vault"
version = "0.1.0"
description = "Scadium custody + settlement + reward claims"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "scadium_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0", features = ["init-if-needed"] }
anchor-spl = "1.0"
